Add missing synchronization in 2d canvas resource release

Call to WaitSyncTokenCHROMIUM was removed by mistake in:
https://chromium-review.googlesource.com/c/chromium/src/+/579690

BUG=769155, 766611

Change-Id: I25a95c79755801463b15fb12047458c594bf24d6
Reviewed-on: https://chromium-review.googlesource.com/685379
Commit-Queue: Xida Chen <xidachen@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Reviewed-by: Xida Chen <xidachen@chromium.org>
Reviewed-by: Olivia Lai <xlai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504748}
Former-commit-id: 3caef7b900b16af22a5eba78a27aef5516011e52